--- a/src/components/Panel_9_Card.css
+++ b/src/components/Panel_9_Card.css
@@ -3,23 +3,30 @@
     justify-content: space-between;
 }
 .Panel_9_Card{
+  width: 100%;
     height: 90vh;    
-    border-radius: 10px;
+    border-radius: 20px !important;
     object-fit: cover;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding-left: 10%;
-    background-position: bottom !important;
-    background-size: cover !important;
     color: #fff;
     margin: 10px auto;
+    border: none !important;
 }
 .first{
-    background: linear-gradient(to right,rgba(15,90,182,1) 20%,rgba(15,90,182,0.7) 40%,rgba(15,90,182,0.4) 60%,rgba(15,90,182,0) 80%),url("../../assets/images/nature_1.jpg") no-repeat
+    background: linear-gradient(to right,rgba(15,90,182,1) 20%,rgba(15,90,182,0.7) 40%,rgba(15,90,182,0.4) 60%,rgba(15,90,182,0) 100%),url("../assets/second.png") no-repeat
 }
 .second{
-    background: linear-gradient(to right,rgba(61,61,61,0.5) 20%,rgba(61,61,61,0.3) 40%,rgba(61,61,61,0.3) 60%,rgba(61,61,61,0.2) 80%,rgba(61,61,61,0.1) 100%),url("../../assets/images/second.png") no-repeat
+  background-position: right bottom !important;
+    background: linear-gradient(to right,rgba(61,61,61,0.5) 20%,rgba(61,61,61,0.3) 40%,rgba(61,61,61,0.3) 60%,rgba(61,61,61,0.2) 80%,rgba(61,61,61,0.1) 100%),url("../assets/second.png") no-repeat
+}
+.Panel_9_Card >.sub_title,.Panel_9_Card >button{
+  align-self: flex-start;
+}
+.Panel_9_Card>.sub_title{
+  color: #ECEFF5 ;
 }
   .Panel_9_Card .info_text{
     display: flex;
